--- a/bbs/public/css/style.css
+++ b/bbs/public/css/style.css
@@ -1,5 +1,6 @@
 /* 全体の背景 */
 body {
+    height: 650px;
     margin: 0;
     padding: 2rem;
     font-family: 'Helvetica Neue', sans-serif;
@@ -10,6 +11,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+
 
 
 }
@@ -26,6 +29,11 @@ body::before {
         linear-gradient(90deg, rgba(0, 0, 0, 0.04) 1px, transparent 1px);
     background-size: 40px 40px;
 
+}
+
+h1{
+
+    padding-bottom: 10px;
 }
 
 
@@ -109,4 +117,43 @@ img {
     margin-top: 1rem;
     border-radius: 6px;
     border: 1px solid #ccc;
+}
+
+.split {
+  position: absolute;
+  width: 50%;
+  height: 80%;
+
+}
+.left-box {
+  /* left: 0; */
+  padding-left: 260px;
+}
+.right-box {
+  right: 0;
+  overflow-y: scroll;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .form-area, .post-area {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.like-btn {
+  color: #aaa; /* 通常の色 */
+  cursor: pointer;
+  border: none;
+  background: none;
+  font-size: 24px;
+  transition: color 0.3s ease;
+}
+
+.like-btn.liked {
+  color: #e254a0; /* いいね押した時の色 */
 }
